# local_rag

./: .gitignore  .ragignore  MANUAL_TEST.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STORAGE_ARCHITECTURE.md  VALIDATION_REPORT.md  config.yaml  inspect_storage.py  pyproject.toml  search_my_docs.py  validate_rag_quality.py  view_my_data.py  visualize_embeddings.py
docs/plans/: 2026-02-13-local-rag-design.md  2026-02-13-local-rag-plan.md
examples/: basic_usage.py  mcp_usage.py
src/local_rag/: config.py  server.py
src/local_rag/engine/: chunker.py  embedder.py  loader.py  retriever.py
src/local_rag/store/: chroma.py
tests/: test_chroma.py  test_chunker.py  test_config.py  test_embedder.py  test_integration.py  test_loader.py  test_mcp_server.py  test_retriever.py
tests/fixtures/: sample.md  sample.py  sample.txt
